1.0.3
	Overview
	
	New Features
		* Basic and Advanced Menu examples added
		* Handling the accelerometer can be done through RokonActivity, see Example15
		
	Changes
		* Documentation added to previous examples
		* Sprite, Particle, Emitter all now extend the superclass DynamicObject - in an attempt to the dynamics' functions
	
	Bug Fixes

1.0.2 - 19/12/2009
	Overview
		* Reworked OpenGL classes
		* Game menu system working
		
	New Features
		* Menu, MenuObject
		
	Changes
		* A new GLSurfaceView/GLRenderer improves speed and touch accuracy
		* Package name changed from rokon to com.stickycoding.rokon
		* Method of handling screen sizes optimized
		* Texture loading has changed, textures are placed on the hardware through texSubImage2D one by one, instead of copying the whole atlas over. This is instead of storing all the bitmaps in the memory for the whole game. 
		
	Bug Fixes
		* A bug in TextureAtlas causing the engine to crash when preparing an atlas
		
1.0.1 - 29/11/2009
 	Overview
 		* Texture handling has been greatly improved, quicker to load, more control over its content - the texture can be changed after it has already been loaded
 		* The engine will automatically crop to the correct aspect ratio on larger screens
 		* The loading screen now scales any sized image to any sized screen, and appears quicker
 		
 	New Features
 		* Rokon.forceLetterBox() will remove all objects outside of the desired aspect ratio, this will be automatically set to true if the aspect ratio of the device is not what you provide
		* Rokon.forceTextureRefresh() will force the engine to use a new atlas configuration each time, this should be on when building, and removed for your published version
 		* Texture.replace(Bitmap/String) copies an image onto the texture, and replaces it on the hardware. The replacement bitmap must have the same dimensions as the original.